--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: haolian
  * @Date: 2024-10-22 14:01:01
  * @LastEditors: haolian
- * @LastEditTime: 2024-11-03 18:38:20
+ * @LastEditTime: 2024-11-06 20:17:57
  * @Description: Do not edit
  * @FilePath: /USB-Paint/index.html
 -->
@@ -17,14 +17,14 @@
   <body>
     <div id="root"></div>
     <!-- cdn引入方式1 type="text/javascript"-->
-    <!-- <script src="./dist/usbpaint.iife.js"  type="text/javascript"></script>
+    <!-- <script src="./dist/usbpaint.iife.js" type="text/javascript"></script>
     <script>
-      new USBPaint({
+      let a = new USBPaint({
         target: document.querySelector("#root"),
         lineOptions: {
-          lineWidth: 5,
+          lineWidth: 8,
           lineColor: "red",
-          lineAlpha: 0.5,
+          lineAlpha: 1,
           lineSmooth: 1,
           lineThin: 0.6,
           lineStream: 1,
@@ -33,16 +33,29 @@
         },
         showTools: true,
         toolsConfig: {
-          tools: 'all',
-          position: 'top'
-          // {
-          //   x: 30,
-          //   y: 50,
-          //   direction: 'row' // column row
-          // },
+          tools: "all", // ["eraser", "paint", "trash", "export" ],
+          //'top'
+          position: {
+            x: 400,
+            y: 400,
+            direction: "column", // column row
+          },
         },
         showScale: true,
-      })
+        background: "#999"
+      });
+      setTimeout(() => {
+        console.log(1);
+        a.eraserTool();
+        setTimeout(() => {
+          console.log(2);
+          a.freeDrawTool();
+          setTimeout(() => {
+            console.log(3);
+            a.clearTool();
+          }, 3000);
+        }, 5000);
+      }, 5000);
     </script> -->
 
     <!-- cdn方式引入2 type="module"-->
@@ -53,32 +66,53 @@
 
     <!-- 本地开发 -->
     <script type="module">
-      import USBPaint from "./src/main.ts"
+      import USBPaint from "./src/main.ts";
       new USBPaint({
         target: document.querySelector("#root"),
-        // lineOptions: {
-        //   lineWidth: 5,
-        //   lineColor: "red",
-        //   lineAlpha: 0.5,
-        //   lineSmooth:  1,
-        //   lineThin:  0.6,
-        //   lineStream:  1,
-        //   lineStart: 0,
-        //   lineEnd: 80,
-        // },
+        lineOptions: {
+          lineWidth: 8,
+          lineColor: "red",
+          lineAlpha: 1,
+          lineSmooth: 1,
+          lineThin: 0.6,
+          lineStream: 1,
+          lineStart: 0,
+          lineEnd: 80,
+        },
         showTools: true,
         toolsConfig: {
-          tools: "all",// ["eraser", "paint", "trash", "export" ],
-          // position: 'top'
-          // {
-          //   x: 30,
-          //   y: 50,
-          //   direction: 'row' // column row
-          // },
+          tools: "all", // ["eraser", "paint", "trash", "export" ],
+          position: {
+            x: 400,
+            y: 400,
+            direction: "column", // column row
+          },
+          iconsConfig: {
+            size: 20,
+            width: 0.5,
+            color: "red",
+            fill: "black",
+          },
+          backgroud: {
+            color: "blue",
+            border: "1px solid red",
+            radius: 10,
+          },
         },
-        // showScale: true,
-        // background: "#000"
-      })
+        background: "black"
+      });
+      // setTimeout(() => {
+      //   console.log(1);
+      //   a.eraserTool();
+      //   setTimeout(() => {
+      //     console.log(2);
+      //     a.freeDrawTool();
+      //     setTimeout(() => {
+      //       console.log(3);
+      //       a.clearTool();
+      //     }, 3000);
+      //   }, 5000);
+      // }, 5000);
     </script>
   </body>
   <style>
@@ -88,7 +122,9 @@
     }
     #root {
       background: #fff;
-      height: 100vh;
+      height: 600px;
+      width: 500px;
+      border: 1px solid #000;
     }
   </style>
 </html>
