--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: haolian
  * @Date: 2024-10-22 14:01:01
  * @LastEditors: haolian
- * @LastEditTime: 2024-11-06 20:17:57
+ * @LastEditTime: 2024-11-07 10:32:23
  * @Description: Do not edit
  * @FilePath: /USB-Paint/index.html
 -->
@@ -67,8 +67,9 @@
     <!-- 本地开发 -->
     <script type="module">
       import USBPaint from "./src/main.ts";
+      // new USBPaint();
       new USBPaint({
-        target: document.querySelector("#root"),
+        // target: document.querySelector("#root"),
         lineOptions: {
           lineWidth: 8,
           lineColor: "red",
@@ -82,24 +83,25 @@
         showTools: true,
         toolsConfig: {
           tools: "all", // ["eraser", "paint", "trash", "export" ],
-          position: {
-            x: 400,
-            y: 400,
-            direction: "column", // column row
-          },
+          position: "top",
+          // {
+          //   x: 400,
+          //   y: 400,
+          //   direction: "column", // column row
+          // },
           iconsConfig: {
-            size: 20,
-            width: 0.5,
-            color: "red",
-            fill: "black",
+            // size: 20,
+            // width: 0.5,
+            // color: "red",
+            // fill: "black",
           },
           backgroud: {
-            color: "blue",
-            border: "1px solid red",
-            radius: 10,
+            // color: "blue",
+            // border: "1px solid red",
+            // radius: 10,
           },
         },
-        background: "black"
+        // background: "black"
       });
       // setTimeout(() => {
       //   console.log(1);
@@ -119,12 +121,13 @@
     body {
       margin: 0;
       padding: 0;
+      height: 100vh;
     }
     #root {
-      background: #fff;
-      height: 600px;
-      width: 500px;
-      border: 1px solid #000;
+      /* background: #fff; */
+      height: 0vh;
+      width: 100vw;
+      /* border: 1px solid #000; */
     }
   </style>
 </html>
