--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: haolian
  * @Date: 2024-10-22 14:01:01
  * @LastEditors: haolian
- * @LastEditTime: 2024-11-07 10:32:23
+ * @LastEditTime: 2024-11-07 19:26:08
  * @Description: Do not edit
  * @FilePath: /USB-Paint/index.html
 -->
@@ -15,7 +15,11 @@
     <title>usb-paint</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app">
+        <div class="test">
+          <div></div>
+        </div>
+    </div>
     <!-- cdn引入方式1 type="text/javascript"-->
     <!-- <script src="./dist/usbpaint.iife.js" type="text/javascript"></script>
     <script>
@@ -60,16 +64,22 @@
 
     <!-- cdn方式引入2 type="module"-->
     <!-- <script type="module">
-      import USBPaint from "./dist/USBPaint.js"
-      new USBPaint()
+      import USBPaint from "./dist/usbpaint.js"
+      new USBPaint( {
+        target: document.getElementsByClassName("test")
+      })
     </script> -->
 
     <!-- 本地开发 -->
     <script type="module">
       import USBPaint from "./src/main.ts";
       // new USBPaint();
+      // setTimeout(() => {
+        
+      // if() {}
       new USBPaint({
-        // target: document.querySelector("#root"),
+        target: document.querySelector(".test"),
+        // target: document.getElementsByClassName("test"),
         lineOptions: {
           lineWidth: 8,
           lineColor: "red",
@@ -103,6 +113,7 @@
         },
         // background: "black"
       });
+      // }, 0);
       // setTimeout(() => {
       //   console.log(1);
       //   a.eraserTool();
